mdl-grid--no-spacing gives correct height and width.

--- a/public/public-Macaulay2/mathProgram.css
+++ b/public/public-Macaulay2/mathProgram.css
@@ -119,6 +119,9 @@ body {
 
 #M2Out {
     color: black;
+    resize: none;
+    height: 100%;
+    width: 100%;
 }
 
 @media (max-width: 1042px) {
